2006-06-20  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* samples/test-01.ops :
	* samples/test-01.prg :
	* samples/test-02.ops :
	* samples/test-02.prg :
	* samples/test-03.ops :
	* samples/test-03.prg :
	* samples/test-04.ops :
	* samples/test-04.prg :
	* samples/test-05.ops :
	* samples/test-05.prg :
	* samples/test-06.ops :
	* samples/test-06.prg :
	* samples/test-07.ops :
	* samples/test-07.prg :
	* samples/test-08.ops :
	* samples/test-08.prg :
	* samples/test-09.ops :
	* samples/test-09.prg :
	* samples/test-10.ops :
	* samples/test-10.prg :
	* samples/test-11.ops :
	* samples/test-11.prg :
	* samples/test-12.ops :
	* samples/test-12.prg :
	* samples/test-13.ops :
	* samples/test-13.prg :

	  - Added test case samples.

	* main/operation.l :
	* main/operation.y :
	* main/program.l :
	* main/program.y :

	  - Changed lineno to linenum so it does not clash with that generated
	    by bison and flex (backport fix from main trunk).

2005-04-15  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* VERSION :
	* configure :
	* configure.ac :

	  - Incremented version to 1.0.4.


	* main/operation.y :
	* main/parser.h :
	* main/vlad.cpp :

	  - Added a -t option in the main program to measure the time it takes
	    for the compute and query operations to complete.

	* README :
	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added an --enable-timer option to enable the timer function.

2005-04-12  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* lib/kb.cpp :

	  - Small typo fix in compute_generate(), in the inheritance rules.

2005-04-06  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* VERSION :
	* configure :
	* configure.ac :

	  - Incremented version to 1.0.3.

	* lib/kb.cpp :

	  - compute_generate() now dumps normal logic program in a
	    more "human readable" form.

2005-04-05  Vino Fernando Crescini  <jcrescin@scm.uws.edu.au>

	* COPYING :
	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.cpp :